# Nabi_Synth

./: Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
patches_config/: builtin.toml
src/: Sounds.rs  main.rs
src/Sounds/: instruments.rs
src/sounds/: mod.rs
